Bug #3618
::zio dcmd does not show timestamp data
Start date:
2013-03-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Include the time since a zio was started in the ::zio dcmd output.
Updated by Christopher Siden almost 8 years ago
- Status changed from In Progress to Closed
commit c55e05c Author: Matthew Ahrens <mahrens@delphix.com> Date: Thu Mar 21 15:47:36 2013 3618 ::zio dcmd does not show timestamp data Reviewed by: Adam Leventhal <ahl@delphix.com> Reviewed by: George Wilson <gwilson@zfsmail.com> Reviewed by: Christopher Siden <christopher.siden@delphix.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Dan McDonald <danmcd@nexenta.com>